fix: adjust sidebar height and alignment for improved layout

--- a/src/components/layout/sidebar.module.css
+++ b/src/components/layout/sidebar.module.css
@@ -2,7 +2,15 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 100vh;
-    justify-content: center;
+    height: 96vh;
+    justify-content: start;
     align-items: center;
+    margin: 2vh 0;
+}
+
+.item {
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    align-content: center;
 }
